--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,22 @@ services:
     ports:
       - "8080:80"
     volumes:
-      -  ./code:/code
-      -  ./config/site.conf:/etc/nginx/conf.d/site.conf
+      - ./code:/code
+      - ./config/site.conf:/etc/nginx/conf.d/site.conf
     links:
       - php
   php:
     image: php:7-fpm
     volumes:
       - ./code:/code
+    depends_on:
+      - db
+    links:
+      - db
+  db:
+    image: mysql:8.0
+    ports:
+      - '6603:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: helloworld
+
