Database.php: connect db class addAdvertise.php:page to add adv getAdvertise.php: page to get adv index.html:some change site.conf:some change docker-compose.yaml: added db Dockerfile: added generate container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     links:
       - php
   php:
-    image: php:7-fpm
+    image: xzrist/php-fpm-7.4
     volumes:
       - ./code:/code
     depends_on:
